wip：完成87一半的翻译

--- a/project/visionos/destination-video.yml
+++ b/project/visionos/destination-video.yml
@@ -11,50 +11,50 @@
   提示: ''
   翻译: 'Destination Video 是一款适用于 visionOS、iOS 和 tvOS 的多平台视频播放应用。应用为用户提供了熟悉的媒体浏览体验：在图书馆中浏览内容并可以播放感兴趣的视频。该应用在所有支持的平台上提供了相近的体验，但同时也利用了 visionOS 的特有功能来创建新颖、身临其境的视听体验。'
 - 内容: 'Play video in an inline player'
-  提示: ''
-  翻译: ''
+  提示: 'inline player 译为内联播放器'
+  翻译: '在内联播放器中播放视频'
 - 内容: 'When you select a video in the library, Destination Video presents a view that displays additional details about the item. The view presents controls to play the video and specify whether to include it in your Up Next list. In visionOS, it also displays a video poster along its leading edge. Tapping the view’s Preview button displays an inline preview of the video.'
   提示: ''
-  翻译: ''
+  翻译: '当您在资源库中选择视频时，“目的地视频”会显示一个有关该项目详情的视图。该视图显示播放视频的控件，并允许用户指定是否将其包含在“待播清单”列表中。在visionOS中，它还会靠左显示一张视频海报。点击视图中的“预览”按钮可在行中显示视频的预览。'
 - 内容: 'When you present an AVPlayerViewController object’s interface as a child of another view, inline controls display, for example, pause, skip, and seek. Showing standard playback controls in your app provides a familiar UI that automatically adapts its appearance to fit each platform, and is the recommended choice in most cases.'
   提示: ''
-  翻译: ''
+  翻译: '当您将 AVPlayerViewController 的界面作为一个子视图显示时，暂停、跳过和查找等内联控件将显示。在应用中显示标准播放控件可提供可自动调整其外观以适应平台的熟悉 UI，这在大多数情况下是推荐的选择。'
 - 内容: 'Destination Video uses a simple UI for the inline player view: a single button that toggles state of playback. AVPlayerViewController doesn’t provide this controls style, but the app uses it to display the video content without controls by setting the value of its showsPlaybackControls property to false. It then overlays the custom playback controls it requires. See Destination Video’s InlinePlayerView type for details on how you can implement this.'
   提示: ''
-  翻译: ''
+  翻译: '目的地视频使用简单的 UI 作为内联播放器视图：一个用于切换播放状态的按钮。 AVPlayerViewController 不提供此控件样式，但本应用仅仅使用它来显示视频内容，而不显示控件，其实现方法是将 showsPlaybackControls 属性的值设置为 false。然后应用会用所需的自定义播放控件覆盖在上。如想了解此功能的详情，请参阅目的地视频中的 InlinePlayerView 类型。'
 - 内容: 'Note'
   提示: ''
-  翻译: ''
+  翻译: '注意'
 - 内容: 'AVPlayerViewController only supports displaying 2D content when embedded inline.'
-  提示: ''
+  提示: '注意 AVPlayerViewController 在内联嵌入时仅支持显示 2D 内容。'
   翻译: ''
 - 内容: 'Play video in a full-window player'
   提示: ''
-  翻译: ''
+  翻译: '在全屏播放器中播放视频'
 - 内容: 'One of the most exciting features of visionOS is its ability to play 3D video along with Spatial Audio, which adds a deeper level of immersion to the viewing experience. Playing 3D content in your app requires that you display AVPlayerViewController full window. When you present the player this way, the system automatically docks it into the ideal viewing position, and presents streamlined playback controls that keep the person’s focus on the content.'
   提示: ''
-  翻译: ''
+  翻译: 'visionOS 最令人兴奋的功能之一是它能够播放 3D 视频和空间音频，这为观看体验增加了更深层的沉浸感。在应用中播放 3D 内容需要在全屏模式下显示 AVPlayerViewController。当您以这种方式呈现播放器时，系统会自动将其停靠在理想的观看位置，并提供简化的播放控件，使用户专注于内容。'
 - 内容: 'Note'
   提示: ''
-  翻译: ''
+  翻译: '注意'
 - 内容: 'In iOS or tvOS, you typically present video in a full-screen presentation using the fullScreenCover(isPresented:onDismiss:content:) modifier. This API is available in visionOS; however, the recommended way to present the player for full-window playback is to set it as the root view of your app’s window group.'
   提示: ''
-  翻译: ''
+  翻译: '在 iOS 或 Apple tvOS 中，你可以使用 fullScreenCover(isPresented:onDismiss:content:) 修饰符在全屏模式下演示视频。此 API 在 visionOS 亦可用；然而，推荐的全屏模式播放视频方法是将视图设置为应用窗口组的根视图。'
 - 内容: 'Destination Video’s ContentView displays the app’s library by default. It observes changes to the player model’s presentation property, which indicates whether the app requests inline or full-window playback. When the presentation state changes to fullWindow, the view redraws the UI to display the player view in place of the library.'
-  提示: ''
-  翻译: ''
+  提示: 'Player model 译为播放器模型。presentation 译为演示状态。'
+  翻译: '默认情况下，目的地视频的 ContentView 会显示应用的资源库。它观察对播放器模型中 presentation（演示状态） 属性的更改，属性的变化意味着应用请求内联播放或全屏播放。当演示状态变为 fullWindow 时，视图将重新绘制 UI，用播放器视图来代替原本的资源库视图。'
 - 内容: 'When someone selects the Play Video button on the detail view, the app calls the player model’s loadVideo(_: presentation:) method requesting the fullWindow presentation option.'
-  提示: ''
-  翻译: ''
+  提示: 'presentation option 译为演示选项'
+  翻译: '当用户在详细信息视图上选择了“播放视频”按钮时，应用会调用播放器模型的 loadVideo(_: presentation:) 方法，请求fullWindow 演示选项。'
 - 内容: 'After the player model successfully loads the video content for playback, it updates its presentation value to fullWindow, which causes the app to replace the library with PlayerView.'
   提示: ''
-  翻译: ''
+  翻译: '当播放器模型成功加载视频内容并播放后，会将其 presentation 值更新为 fullWindow ，这会让应用将资源库替换为 PlayerView 。'
 - 内容: 'To dismiss the full-window player in visionOS, people tap the Back button in the player UI. To handle this action, the app’s PlayerViewControllerDelegate type defines an AVPlayerViewControllerDelegate object that handles the dismissal.'
   提示: ''
-  翻译: ''
+  翻译: '要在 visionOS 中关闭全屏播放器，用户可以点击播放器 UI 中的“后退”按钮。为了处理此操作，应用的 PlayerViewControllerDelegate 类型定义了一个 AVPlayerViewControllerDelegate 对象，用于关闭界面。'
 - 内容: 'When the delegate receives this call, it clears the media from the player model and resets the presentation state back to its default value, which results in the Destination Video app redisplaying the library view.'
   提示: ''
-  翻译: ''
+  翻译: '当委托（delegate）收到此调用时，它会从播放器模型中清除媒体，并将演示状态重置回其默认值，这会让目的地视频应用重新显示资源库视图'
 - 内容: 'Configure the Spatial Audio experience'
   提示: ''
   翻译: ''
