feat：完成 87: Destination Video 的翻译

--- a/project/visionos/destination-video.yml
+++ b/project/visionos/destination-video.yml
@@ -57,37 +57,37 @@
   翻译: '当委托（delegate）收到此调用时，它会从播放器模型中清除媒体，并将演示状态重置回其默认值，这会让目的地视频应用重新显示资源库视图'
 - 内容: 'Configure the Spatial Audio experience'
   提示: ''
-  翻译: ''
+  翻译: '配置空间音频体验'
 - 内容: 'Media playback apps require common configuration of their capabilities and audio session. In addition to performing the steps outlined in Configuring your app for media playback, Destination Video also adopts new AVAudioSession API to customize a person’s Spatial Audio experience.'
   提示: ''
-  翻译: ''
+  翻译: '媒体播放应用需要对其功能和音频会话进行通用配置。除了执行配置应用以进行媒体播放中列举的步骤之外，Destination Video 还采用新的 AVAudioSession API 来自定义用户的空间音频体验。'
 - 内容: 'After the app successfully loads a video for playback, it configures the Spatial Audio experience for the current presentation. For the inline player view, it sets the experience to a small, focused sound stage where the audio originates from the location of the view. When displaying a video full window, it sets the experience to a large, fully immersive sound stage.'
   提示: ''
-  翻译: ''
+  翻译: '应用成功加载视频进行播放后，会为当前的演示内容配置空间音频体验。对于内联播放器视图，它将体验设置为一个小型的、集中的声场，其中音源来自视图的位置。当显示全屏视频时，它会将体验设置为大型、完全沉浸式的声场。'
 - 内容: 'Present an immersive space'
   提示: ''
-  翻译: ''
+  翻译: '呈现沉浸式空间'
 - 内容: 'Building video playback apps for visionOS provides new opportunities to enhance the viewing experience beyond the bounds of the player window. To add a greater level of immersion, the sample presents an immersive space that displays a scene around a person as they watch the video. It defines the immersive space in the DestinationVideo app structure.'
   提示: ''
-  翻译: ''
+  翻译: '在 visionOS 上制作视频播放应用提供了新的机会，因为开发者可以将观看体验扩展到播放器窗口之外。为了提供更强的沉浸感，该示例提供了一个在用户观看视频时在其周围显示风景的沉浸式空间。应用结构体 DestinationVideo 中定义了沉浸式空间。'
 - 内容: 'The immersive space presents an instance of DestinationView, which maps a texture to the inside of a sphere that it displays around a person. The app presents it using the .progressive immersion style, which lets someone change their amount of immersion by turning the Digital Crown on the device.'
   提示: ''
-  翻译: ''
+  翻译: '沉浸式空间呈现了一个 DestinationView 的实例，它将纹理映射到围绕用户而显示的球体内部。应用使用 .progressive 风格呈现它，该风格允许用户通过转动设备上的“数码表冠”来修改沉浸度。'
 - 内容: 'The Destination Video app automatically presents the immersive space when a person navigates to a video’s detail view, and dismisses it when they return to the library. To monitor these events, the app observes its navigation path to determine when a navigation event occurs so it can show or dismiss the space.'
   提示: ''
-  翻译: ''
+  翻译: '应用会在用户进入视频详情视图时自动显示沉浸式空间，并在返回资源库时将其关闭。为了监视这些事件，应用会观察其导航路径以确定导航事件发生的时机，并显示或关闭空间。'
 - 内容: 'Provide a shared viewing experience'
   提示: ''
-  翻译: ''
+  翻译: '提供共享的观看体验'
 - 内容: 'One of the best ways to enhance your app’s playback experience is to make that experience shareable with others. You can use the AVFoundation and the GroupActivities frameworks to build SharePlay experiences that bring people together even when they can’t be in the same location.'
   提示: ''
-  翻译: ''
+  翻译: '增强应用播放体验的最佳方法之一是使体验可与他人共享。您可以使用 AVFoundation 和 Group Activities 框架来构建同播共享体验，即使用户们不在同一个地方，同播体验也能够拉近他们的距离。'
 - 内容: 'The Destination Video app creates an experience where people can watch videos with others across devices and platforms. It defines a group activity called VideoWatchingActivity that adopts the GroupActivity protocol. When people have a FaceTime call active and they play a video in the full-window player, it becomes eligible for playback for everyone on the call.'
   提示: ''
-  翻译: ''
+  翻译: '目的地视频创造了一种用户可以跨设备和平台与他人一起观看视频的体验。它定义了一个名为 VideoWatchingActivity 且遵循 GroupActivity 协议的组活动。当用户们激活了 FaceTime 通话并在全屏播放器中播放视频时，通话中的每个人都有权限播放该视频。'
 - 内容: 'The app’s VideoWatchingCoordinator actor manages Destination Video’s SharePlay functionality. It observes the activation of new VideoWatchingActivity sessions and when one starts, it sets the GroupSession instance on the player object’s AVPlaybackCoordinator.'
   提示: ''
-  翻译: ''
+  翻译: '应用的 VideoWatchingCoordinator actor 管理目的地视频的同播共享功能。它观察新 VideoWatchingActivity 会话的激活，当一个会话启动时，它将 GroupSession 对象设置为播放器对象的 AVPlaybackCoordinator。'
 - 内容: 'With the player configured to use the group session, when the app loads new videos, they become eligible to share with people in the FaceTime call.'
   提示: ''
-  翻译: ''
+  翻译: '将播放器配置使用群组会话后，每当应用加载了新视频，它们都可以在 FaceTime 通话中与他人共享。'
