Update: 根据CR修改翻译

--- a/project/visionos/positioning-and-sizing-windows.yml
+++ b/project/visionos/positioning-and-sizing-windows.yml
@@ -1,6 +1,6 @@
 - 内容: 'Positioning and sizing windows'
   提示: ''
-  翻译: '定位窗口和调整窗口大小'
+  翻译: '定位和调整窗口大小'
 - 内容: 'Influence the initial geometry of windows that your app presents.'
   提示: ''
   翻译: '影响应用呈现的窗口的初始几何位置和大小'
@@ -9,7 +9,7 @@
   翻译: '概述'
 - 内容: 'visionOS and macOS enable people to move and resize windows. In some cases, your app can use scene modifiers to influence a window’s initial geometry on these platforms, as well as to specify the strategy that the system employs to place minimum and maximum size limitations on a window. This kind of configuration affects both windows and volumes, which are windows with the volumetric window style.'
   提示: ''
-  翻译: 'visionOS 和 macOS 允许用户能够移动窗口和调整窗口大小。在某些情况下，你的应用可以使用场景修饰器来影响窗口在这些平台上的初始几何位置和大小，以及指定系统用于在窗口上设置最小和最大尺寸限制的策略。这种配置会影响窗口和立体窗口（具有 volumetric 窗口样式的窗口）。'
+  翻译: 'visionOS 和 macOS 允许用户能够移动和调整窗口大小。在某些情况下，你的应用可以使用场景修饰器来影响窗口在这些平台上的初始几何位置和大小，以及指定系统用于在窗口上设置最小和最大尺寸限制的策略。这种配置会影响窗口和立体窗口（具有 volumetric 窗口样式的窗口）。'
 - 内容: 'Your ability to configure window size and position is subject to the following constraints:'
   提示: ''
   翻译: '配置窗口大小和位置的能力受以下限制：'
@@ -21,19 +21,19 @@
   翻译: '虽然你可以更改窗口的内容，但不能在窗口出现后直接操作窗口位置或大小。这确保了用户可以完全控制他们的工作空间。'
 - 内容: 'During state restoration, the system restores windows to their previous position and size.'
   提示: ''
-  翻译: '在状态还原期间，系统会将窗口恢复到其以前的位置和大小。'
+  翻译: '在 app 状态恢复的时候，系统会将窗口恢复到其以前的位置和大小。'
 - 内容: 'Note'
   提示: ''
   翻译: '注意'
 - 内容: 'Windows in iPadOS occupy the full screen, or share the screen with another window in Slide Over or Split View. You can’t programmatically affect window geometry on that platform.'
   提示: ''
-  翻译: 'iPadOS 中的窗口占据全屏，或在“侧拉”或“分屏浏览”中与另一个窗口共享屏幕。你无法以编程方式影响该平台上的窗口几何位置和大小。'
+  翻译: 'iPadOS 中的窗口占据全屏，或在“侧拉”（Slide Over）或“分屏浏览”（Split）中与另一个窗口共享屏幕。你无法以编程方式影响该平台上的窗口几何位置和大小。'
 - 内容: 'Specify initial window position'
   提示: ''
-  翻译: '指定初始窗口位置'
+  翻译: '指定窗口初始位置'
 - 内容: 'In macOS, the first time your app opens a window from a particular scene declaration, the system places the window at the center of the screen by default. For scene types that support multiple simultaneous windows, the system offsets each additional window by a small amount to avoid fully obscuring existing windows.'
   提示: ''
-  翻译: '在 macOS 中，当你的 App 首次从特定场景声明中打开窗口时，系统会默认将该窗口置于屏幕中央。对于支持多个同时并存窗口的场景类型，系统会将每个附加窗口偏移些许，以避免完全遮挡现有窗口。'
+  翻译: '在 macOS 中，当你的 App 首次从特定场景声明中打开窗口时，系统会默认将该窗口置于屏幕中央。对于支持多个同时并存窗口的场景类型，系统会将每个新添加的窗口偏移一小段距离，以避免完全遮挡现有窗口。'
 - 内容: 'You can override the default placement of the first window in macOS by applying the defaultPosition(_:) scene modifier to indicate where to place the window relative to the screen bounds. For example, you can request that the system place a new window in the bottom trailing corner of the screen:'
   提示: ''
   翻译: '你可以通过应用 defaultPosition(_:) 场景修饰器来指示窗口相对于屏幕边界的放置位置，从而覆盖 macOS 中首个窗口的默认位置。例如，你可以请求系统在屏幕的右下角放置一个新窗口：'
@@ -45,10 +45,10 @@
   翻译: '重要'
 - 内容: 'You can’t use defaultPosition(_:) in visionOS. The system always places new windows directly in front of people, where they happen to be looking at the moment the window opens. This helps to make people aware of new windows.'
   提示: ''
-  翻译: '你不能在 visionOS 中使用 defaultPosition(_:)。visionOS 总是将新窗口直接放置在用户面前，在窗口打开时的用户一眼就能看到的位置。这有助于用户感知新窗口的出现。'
+  翻译: '你不能在 visionOS 中使用 defaultPosition(_:)。visionOS 总是将新窗口直接放置在用户面前，在窗口打开时用户一眼就能看到的位置。这有助于用户感知新窗口的出现。'
 - 内容: 'Specify initial window size'
   提示: ''
-  翻译: '指定初始窗口大小'
+  翻译: '指定窗口初始大小'
 - 内容: 'You can indicate a default initial size for a new window that the system creates from a Scene declaration by applying one of the default size scene modifiers, like defaultSize(width:height:). For example, you can request that new windows that a WindowGroup generates occupy 600 points in the x-dimension and 400 points in the y-dimension:'
   提示: ''
   翻译: '你可以通过应用默认大小场景修饰器的其中一个（如 defaultSize(width:height:) ）来指示系统从 Scene 声明中创建的新窗口的默认初始大小。例如，你可以请求 WindowGroup 生成的新窗口在 x 维度中占据 600 个点，在 y 维度中占据 400 个点：'
@@ -57,7 +57,7 @@
   翻译: '系统可能会根据窗口的内容和可调整大小设置来限制窗口的实际大小。'
 - 内容: 'Specify window resizability'
   提示: ''
-  翻译: '指定窗口大小可调整性'
+  翻译: '指定窗口大小的可调整性'
 - 内容: 'Both macOS and visionOS provide interface controls that enable people to resize windows, within certain limits. For example, people can use the control that appears when they look at the corner of a visionOS window to resize a window on that platform.'
   提示: ''
   翻译: 'macOS 和 visionOS 都提供相应的界面控件，使用户能够在一定限制内调整窗口大小。例如，用户可以使用查看 visionOS 窗口角落时出现的控件来调整该系统平台上的窗口大小。'
