--- a/project/visionos/adopting_the_system_player_interface_in_visionos.yml
+++ b/project/visionos/adopting_the_system_player_interface_in_visionos.yml
@@ -108,28 +108,28 @@
   翻译: '在一个使用简单结构体来保存字符串和数据的应用中，你可以将这些值映射到相应的元数据标识符，并生成元数据项数组：'
 - 内容: 'To apply the metadata to the current player item, set the array of metadata items as the value of the player item’s externalMetadata property:'
   提示: ''
-  翻译: '若要将元数据应用于当前播放器项，请将元数据项数组设置为播放器项 externalMetadata 属性的值：'
+  翻译: '若要将元数据应用于当前播放项，将元数据项数组赋值给播放项的 externalMetadata 属性：'
 - 内容: 'Only the title and subtitle values display in the title view. The player presents the other supported metadata values in its Info tab, which the section below describes.'
   提示: ''
-  翻译: '标题视图中仅显示标题和副标题值。播放器在其“信息”选项卡中显示其他支持的元数据值，以下部分将对此进行介绍。'
+  翻译: '标题视图中仅显示标题和副标题。播放器在其“信息”选项卡中显示其他支持的元数据值，文章的以下部分将对此进行介绍。'
 - 内容: 'Display custom informational views'
   提示: ''
   翻译: '显示自定义信息视图'
 - 内容: 'The visionOS player UI can display one or more content tabs in the user interface to show supporting information or related content. By default, the player presents an Info tab when an asset contains embedded metadata or when you set external metadata on the player item, as the Display supporting metadata section above describes.'
   提示: ''
-  翻译: 'visionOS 播放器 UI 可以在用户界面中显示一个或多个内容选项卡，以显示支持信息或相关内容。默认情况下，当资产包含嵌入的元数据或在播放器项目上设置外部元数据时，播放器会显示“信息”选项卡，如上面的“显示支持元数据”部分所述。'
+  翻译: 'visionOS 播放器 UI 可以在用户界面中显示一个或多个内容选项卡，以显示附属信息或相关内容。当资源包含内嵌元数据或在播放器项目上设置了外部元数据时，播放器会如上面的“显示相关元数据”章节所述，默认显示“信息”选项卡。'
 - 内容: 'Your app can also present custom tabs to show supporting content. You define your tab content as standard SwiftUI views, wrap them in a UIHostingController, and set them as the customInfoViewControllers property. The player UI uses the title property of the hosting controller to display as the tab title in the interface, so set this value before setting it on the player view controller.'
   提示: ''
-  翻译: '您的应用还可以显示自定义选项卡以显示支持内容。您可以将选项卡内容定义为标准 SwiftUI 视图，将它们包装在 UIHostingController 中，然后将它们设置为 customInfoViewControllers 属性。播放器 UI 使用托管控制器的 title 属性在界面中显示为选项卡标题，因此请先设置此值，然后再在播放器视图控制器上设置该值。'
+  翻译: '您的应用还可以显示自定义选项卡以显示相关内容。您可以将选项卡内容定义为标准 SwiftUI 视图，将它们包装在 UIHostingController 中，然后将它们设置为 customInfoViewControllers 属性。播放器 UI 使用托管控制器的 title 属性在界面中显示为选项卡标题，因此请先设置此值，再在播放器视图控制器上设置托管控制器。'
 - 内容: 'Present actions in the Info tab'
   提示: ''
   翻译: '在“信息”选项卡中显示操作'
 - 内容: 'The player UI presents an Info tab when the asset it displays provides embedded or external metadata. The tab’s view displays the metadata details, and it may show up to two UIAction controls along its trailing edge:'
   提示: ''
-  翻译: '当播放器 UI 显示的资产提供嵌入或外部元数据时，它会显示一个“信息”选项卡。选项卡的视图显示元数据详细信息，并且沿其后缘最多可以显示两个 UIAction 控件：'
+  翻译: '当播放器 UI 显示的资源提供内嵌或外部元数据时，它会显示一个“信息”选项卡。选项卡视图会显示元数据详情，并且沿后边缘显示最多两个 UIAction 控件：'
 - 内容: 'Customize the actions the view presents by setting a value for the player view controller’s infoViewActions property. When playing nonlive content, this property contains a single-element array that presents an action to play the content from the beginning. You can replace the default value (if present), add an additional action, or set this property value to an empty array to display no actions. The example below shows how to add a Add to Favorites action to the view:'
   提示: ''
-  翻译: '通过设置播放器视图控制器 infoViewActions 属性的值来自定义视图显示的操作。播放非实时内容时，此属性包含一个单元素数组，该数组显示从头开始播放内容的操作。您可以替换默认值（如果存在）、添加其他操作，或将此属性值设置为空数组以不显示任何操作。下面的示例演示如何向视图添加“添加到收藏夹”操作：'
+  翻译: '设置播放器视图控制器的 infoViewActions 属性可以自定义视图显示的操作。当播放非实时内容时，此属性为一个单元素数组，用于存放从头播放的操作。您可以替换默认值（如存在）、添加其他操作，或将此属性设置为空数组以不显示任何操作。下面的示例演示了如何向视图添加“添加到收藏夹”操作：'
 - 内容: 'Display actions contextually'
   提示: ''
   翻译: '根据上下文显示操作'
