--- a/project/visionos/bringing-your-app-to-visionos.yml
+++ b/project/visionos/bringing-your-app-to-visionos.yml
@@ -1,21 +1,21 @@
 - 内容: 'Bringing your existing apps to visionOS'
   提示: ''
-  翻译: ''
+  翻译: '将您的现有应用引入 visionOS'
 - 内容: 'Build a version of your iPadOS or iOS app using the visionOS SDK, and update your code for platform differences.'
   提示: ''
-  翻译: ''
+  翻译: '使用 visionOS SDK 将您的 iPadOS 或 iOS 应用重构一个新版本，并更新代码以适应平台差异。'
 - 内容: 'Overview'
   提示: ''
-  翻译: ''
+  翻译: '概述'
 - 内容: 'If you have an existing app that runs in iPadOS or iOS, you can build that app against the visionOS SDK to run it on the platform. Apps built specifically for visionOS adopt the standard system appearance, and they look more natural on the platform. Updating your app is also an opportunity to add elements that work well on the platform, such as 3D content and immersive experiences.'
   提示: ''
-  翻译: ''
+  翻译: '如果您有在 iPadOS 或 iOS 中运行的现存应用，您可以使用 visionOS SDK 构建该应用程序，以便在该平台上运行。为 visionOS 专门构建的应用采用标准系统外观，在该平台上看起来更自然。同时，更新应用也是添加在该平台上吸引眼球的元素（如 3D 内容和沉浸式体验）的好机会。'
 - 内容: 'In most cases, all you need to do to support visionOS is update your Xcode project’s settings and recompile your code. Depending on your app, you might need to make additional changes to account for features that are only found in the iOS SDK. While most of the same technologies are available on both platforms, some technologies don’t make sense or require hardware that isn’t present on visionOS devices. For example, people don’t typically use a headset to make contactless payments, so apps that that use the ProximityReader framework must disable those features when running in visionOS.'
   提示: ''
-  翻译: ''
+  翻译: '在大多数情况下，您只需、更新 Xcode 的项目设置并重新编译代码即可支持 visionOS。根据你的应用，你可能需要进行其他更改，以解决那些仅在 iOS SDK 中支持的功能。虽然大多数同类技术在两个平台上都可用，有些技术在 visionOS 设备上并不合理，或者需要的硬件并不存在。例如，人们通常不使用头戴式设备进行电子支付，因此使用 ProximityReader 框架的应用在 visionOS 中运行时必须禁用这些功能。'
 - 内容: 'Note'
   提示: ''
-  翻译: ''
+  翻译: '备注'
 - 内容: 'If you use ARKit in your iOS app to create an augmented reality experience, you need to make additional changes to support ARKit in visionOS. For information on how to update this type of app, see Bringing your ARKit app to visionOS.'
   提示: ''
   翻译: ''
