--- a/project/visionos/adopting_the_system_player_interface_in_visionos.yml
+++ b/project/visionos/adopting_the_system_player_interface_in_visionos.yml
@@ -18,25 +18,25 @@
   翻译: '除了提供系统播放界面，你还可以使用 AVPlayerViewController 提供类似于 macOS 中 QuickTime Player 的媒体剪辑体验。更多信息，请参考 visionOS 中修剪和导出媒体。'
 - 内容: 'Explore presentation options'
   提示: ''
-  翻译: '探索演示选项'
+  翻译: '探索展示方式'
 - 内容: 'Use AVPlayerViewController to play video in windowed environments in visionOS. It automatically adapts its user interface to best fit its presentation. For example, when you present it nested inside another view, it displays an inline user interface:'
   提示: ''
-  翻译: '使用 AVPlayerViewController 在 visionOS 的窗口环境中播放视频，它会自动调整其用户界面以适应当前演示方式。例如，当你将其嵌套在另一个视图中时，它会显示一个内联用户界面：'
+  翻译: '使用 AVPlayerViewController 在 visionOS 的窗口环境中播放视频，它会自动调整其用户界面以适应当前展示方式。例如，当你将其嵌套在另一个视图中时，它会显示一个内嵌用户界面：'
 - 内容: 'Note'
   提示: ''
   翻译: '备注'
 - 内容: 'When you present the player inline, it only displays standard 2D video. To play 3D content, present it fullscreen.'
   提示: ''
-  翻译: '当你以内联方式展示播放器时，它仅支持标准 2D 视频。如要播放 3D 内容，请使用全屏展示。'
+  翻译: '当你以内嵌方式展示播放器时，它仅支持标准 2D 视频。如要播放 3D 内容，请使用全屏展示。'
 - 内容: 'Present the player in full-screen mode by setting it as the exclusive root view of your app, or by presenting it using the fullScreenCover(item:onDismiss:content:) modifier. In full-screen mode, the player presents a more content-forward design that dims the environment by default to provide more suitable viewing. This provides a streamlined viewing experience for both 2D and 3D content.'
   提示: ''
-  翻译: '将播放器设置为应用的唯一根视图，或使用 fullScreenCover(item:onDismiss:content:) 修饰符，可以以全屏模式展示播放器。在全屏模式下，播放器呈现出一种更加偏内容导向的设计，默认会调暗环境光线，以提供更合适的观看效果。这为欣赏 2D 和 3D 内容提供了精简的观看体验。'
+  翻译: '将播放器设置为应用的唯一根视图，或使用 fullScreenCover(item:onDismiss:content:) 修饰符，可以以全屏模式展示播放器。在全屏模式下，播放器呈现出一种更加偏内容导向的设计，默认会调暗环境光线，以提供更合适的观看效果。这为欣赏 2D 和 3D 内容提供了优化的观看体验。'
 - 内容: 'Display supporting metadata'
   提示: ''
   翻译: '显示相关元数据'
 - 内容: 'The user interface displays a title view above the transport bar when the current player item contains title and subtitle metadata. When playing live-streaming content, the title view may also display a badge to indicate the content state to the viewer.'
   提示: ''
-  翻译: '在当前播放项目包含标题和副标题元数据时，用户界面会在传输栏上方显示标题视图。当播放实时内容时，标题视图还可能显示一个徽章，向观众提示内容状态。'
+  翻译: '在当前播放项目包含标题和副标题元数据时，用户界面会在播放栏上方显示标题视图。当播放实时内容时，标题视图还可能显示一个徽章，向观众提示内容状态。'
 - 内容: 'The title view displays the values of an asset’s commonIdentifierTitle and iTunesMetadataTrackSubTitle metadata items, when available. If your media doesn’t provide embedded metadata, you can add supplemental metadata to display by creating instances of AVMetadataItem. The table below lists the metadata values the player user interface supports.'
   提示: ''
   翻译: '标题视图会显示媒体元数据项 commonIdentifierTitle 和 iTunesMetadataTrackSubTitle 的值（如可用）。如果你的媒体不提供嵌入的元数据，则可以通过创建 AVMetadataItem 的实例来补充元数据。下表列出了播放器用户界面支持的元数据值。'
