--- a/project/visionos/making-your-app-compatible-with-visionos.yml
+++ b/project/visionos/making-your-app-compatible-with-visionos.yml
@@ -1,6 +1,6 @@
 - 内容: 'Making your existing app compatible with visionOS'
   提示: ''
-  翻译: '使你现有的应用与 visionOS 兼容'
+  翻译: '使现有应用与 visionOS 兼容'
 - 内容: 'Modify your iPadOS or iOS app to run successfully in visionOS.'
   提示: ''
   翻译: '修改你的 iPadOS 或 iOS 应用，以便在 visionOS 中成功运行。
