--- a/project/visionos/placing-content-on-detected-planes.yml
+++ b/project/visionos/placing-content-on-detected-planes.yml
@@ -1,42 +1,42 @@
 - 内容: 'Placing content on detected planes'
   提示: ''
-  翻译: ''
+  翻译: '在检测到的平面上放置内容'
 - 内容: 'Detect horizontal surfaces like tables and floors, as well as vertical planes like walls and doors.'
   提示: ''
-  翻译: ''
+  翻译: '检测水平平面（如桌子和地板）以及垂直平面（如墙壁和门）。'
 - 内容: 'Overview'
   提示: ''
-  翻译: ''
+  翻译: '概述'
 - 内容: 'Flat surfaces are an ideal place to position content in an app that uses a Full Space in visionOS. They provide a place for virtual 3D content to live alongside a person’s surroundings. Use plane detection in ARKit to detect these kinds of surfaces and filter the available planes based on criteria your app might need, such as the size of the plane, its proximity to someone, or a required plane orientation.'
   提示: ''
-  翻译: ''
+  翻译: '平面是在 visionOS 上使用“完整空间”的应用中放置内容的理想场所。它们为虚拟 3D 内容提供了与用户周围环境共存的场所。使用 ARKit 中的平面检测功能可检测到这类表面，并根据你的应用可能需要的条件（如平面大小、与用户的距离或所需的平面方向）过滤可用的平面。'
 - 内容: 'Use RealityKit anchor entities for basic plane anchoring'
   提示: ''
-  翻译: ''
+  翻译: '使用 RealityKit 锚点实体进行基本的平面锚定'
 - 内容: 'If you don’t need a specific plane in your app and you’re rendering your app’s 3D content in RealityKit, you can use an AnchorEntity instead. This approach lets you attach 3D content to a plane without prompting the person for world-sensing permission and without any particular knowledge of where that plane is relative to the person.'
   提示: ''
-  翻译: ''
+  翻译: '如果你的应用不需要特定的平面，而且你在使用 RealityKit 渲染应用的 3D 内容，那么你可以使用锚点实体（AnchorEntity）作为代替。这种方法可以让你将 3D 内容添加到一个平面上，且无需提示用户获得世界感知权限，也无需去了解该平面相对于用户的位置。'
 - 内容: 'The following shows an anchor that you can use to attach entities to a table:'
   提示: ''
-  翻译: ''
+  翻译: '下代码显示了一个锚点，你可以用它将实体添加到桌子上：'
 - 内容: 'Anchor entities don’t let you choose a specific plane in a person’s surroundings, but rather let you ask for a plane with certain characteristics. When you need more specific plane selection or real-time information about the plane’s position and orientation in the world, use ARKitSession and PlaneDetectionProvider.'
   提示: ''
-  翻译: ''
+  翻译: '锚点实体不允许你选择人物周围环境中的特定平面，而是允许你请求具有某些特征的平面。当你需要选择更具体的平面或有关平面在世界中位置和方向的实时信息时，请使用 ARKitSession 和 PlaneDetectionProvider。'
 - 内容: 'Configure an ARKit session for plane detection'
   提示: ''
-  翻译: ''
+  翻译: '为平面检测配置 ARKit 会话'
 - 内容: 'Plane-detection information comes from an ARKitSession that’s configured to use a PlaneDetectionProvider. You can choose to detect horizontal planes, vertical planes, or both. Each plane that ARKit detects comes with a classification, like PlaneAnchor.Classification.table or PlaneAnchor.Classification.floor. You can use these classifications to further refine which kinds of planes your app uses to present content. Plane detection requires ARKitSession.AuthorizationType.worldSensing authorization.'
   提示: ''
-  翻译: ''
+  翻译: '平面检测信息来自配置了 PlaneDetectionProvider 的 ARKitSession。你可以选择检测水平或垂直平面或两者。ARKit 检测到的每个平面都有一个分类，如 PlaneAnchor.Classification.table 或 PlaneAnchor.Classification.floor。你可以使用这些分类来进一步选择用哪类平面来应用中呈现内容。平面检测需要 ARKitSession.AuthorizationType.worldSensing 授权。'
 - 内容: 'The following starts a session that detects both horizontal and vertical planes, but filters out planes classified as windows:'
   提示: ''
-  翻译: ''
+  翻译: '下面代码启动的会话可检测水平和垂直平面，但会过滤掉被归类为窗口的平面：'
 - 内容: 'Create and update entities associated with each plane'
   提示: ''
-  翻译: ''
+  翻译: '创建并更新与平面关联的实体'
 - 内容: 'If you’re displaying content that needs to appear attached to a particular plane, update your content whenever you receive new information from ARKit. When a plane is no longer available in the person’s surroundings, ARKit sends a removal event. Respond to these events by removing content associated with the plane.'
   提示: ''
-  翻译: ''
+  翻译: '如果你在显示需要绑定至特定平面的内容，请在收到来自 ARKit 的新信息时更新这些内容。当用户周围环境中的某个平面不再可用时，ARKit 会发送移除事件。请通过移除与平面相关的内容来响应移除事件。'
 - 内容: 'The following shows plane updates that place a text entity on each plane in a person’s surroundings; the text entity displays the kind of plane ARKit detected:'
   提示: ''
-  翻译: ''
+  翻译: '下面代码展示了更新平面过程：向用户周围的每个平面上放置文本实体；文本实体显示的是 ARKit 检测到的平面类型：'
