fix：校正一些标题和副标题中的错误

--- a/project/visionos/designing-realitykit-content-with-reality-composer-pro.yml
+++ b/project/visionos/designing-realitykit-content-with-reality-composer-pro.yml
@@ -3,7 +3,7 @@
   翻译: '使用 Reality Composer Pro 设计 RealityKit 内容'
 - 内容: 'Design RealityKit scenes for your visionOS app.'
   提示: ''
-  翻译: '为你的 visionOS 应用设计 RealityKit 场景'
+  翻译: '为你的 visionOS 应用设计 RealityKit 场景。'
 - 内容: 'Overview'
   提示: ''
   翻译: '概览'
