--- a/project/visionos/understanding-the-realitykit-modular-architecture.yml
+++ b/project/visionos/understanding-the-realitykit-modular-architecture.yml
@@ -1,9 +1,9 @@
 - 内容: 'Understanding RealityKit’s modular architecture'
   提示: ''
-  翻译: '了解如何构建 RealityKit 模块'
+  翻译: '了解 RealityKit 的模块化架构'
 - 内容: 'Learn how everything fits together in RealityKit.'
   提示: ''
-  翻译: '理解在 RealityKit 中一切如何相互配合'
+  翻译: '了解如何在 RealityKit 中将一切组合在一起。'
 - 内容: 'Overview'
   提示: ''
   翻译: '概览'
