--- a/project/visionos/bringing-your-app-to-visionos.yml
+++ b/project/visionos/bringing-your-app-to-visionos.yml
@@ -1,6 +1,6 @@
 - 内容: 'Bringing your existing apps to visionOS'
   提示: ''
-  翻译: '将你的现有应用引入 visionOS'
+  翻译: '将现有应用移植到 visionOS'
 - 内容: 'Build a version of your iPadOS or iOS app using the visionOS SDK, and update your code for platform differences.'
   提示: ''
   翻译: '使用 visionOS SDK 为你的 iPadOS 或 iOS 应用构建一个新版本，并更新代码以适应平台差异。'
@@ -18,7 +18,7 @@
   翻译: '备注'
 - 内容: 'If you use ARKit in your iOS app to create an augmented reality experience, you need to make additional changes to support ARKit in visionOS. For information on how to update this type of app, see Bringing your ARKit app to visionOS.'
   提示: ''
-  翻译: '如果你在 iOS 应用中使用了 ARKit 来实现增强现实体验，则需要进行额外的更改才能在 visionOS 中支持 ARKit。有关如何更新此类应用，请参阅将 ARKit 应用引入 visionOS。'
+  翻译: '如果你在 iOS 应用中使用了 ARKit 来实现增强现实体验，则需要进行额外的更改才能在 visionOS 中支持 ARKit。有关如何更新此类应用，请参阅将 ARKit 应用移植到 visionOS。'
 - 内容: 'Add visionOS as a supported destination for your app'
   提示: ''
   翻译: '将 visionOS 添加为应用的支持终端（supported destination）'
@@ -189,7 +189,7 @@
   翻译: '有些框架的行为变化会影响你的 visionOS 应用，有些框架会在所需硬件在当前平台不可用时禁用功能。为了帮助你避免使用缺失功能的 API，许多框架都提供了检查功能可用性的 API。继续使用这些 API，并在功能不可用时采取适当的措施。而在使用没有检查可用性的框架时，请做好框架代码失效或报错的准备。'
 - 内容: 'ARKit. This framework requires you to use different APIs for iOS and visionOS. For more information, see Bringing your ARKit app to visionOS.'
   提示: ''
-  翻译: 'ARKit。此框架要求你为 iOS 和 visionOS 使用不同的 API。有关详细信息，请参阅将 ARKit 应用引入 visionOS。'
+  翻译: 'ARKit。此框架要求你为 iOS 和 visionOS 使用不同的 API。有关详细信息，请参阅将 ARKit 应用移植到 visionOS。'
 - 内容: 'AutomaticAssessmentConfiguration. The framework returns an error if you try to start a test in visionOS.'
   提示: ''
   翻译: 'AutomaticAssessmentConfiguration。如果你尝试在 visionOS 中启动测试，该框架会返回错误。'
@@ -249,7 +249,7 @@
   翻译: '有关如何将代码隔离到 iOS 应用版本的更多信息，请参阅在特定平台或操作系统版本上运行代码。'
 - 内容: 'Update your interface to take advantage of visionOS features'
   提示: ''
-  翻译: '更新你的界面以更好地利用 visionOS 功能'
+  翻译: '更新界面以更好地利用 visionOS 功能'
 - 内容: 'After your existing code runs correctly in visionOS, look for ways to improve the experience you offer on the platform. In visionOS, you can display content using more than just windows. Think about ways to incorporate the following elements into your interface:'
   提示: ''
   翻译: '当你的现有代码在 visionOS 中正常运行后，请设法改善你在该平台上提供的体验。在 visionOS 中，你可以使用窗口之外的方式来显示内容。请考虑如何将以下元素融入你的界面：'
@@ -282,7 +282,7 @@
   翻译: '有关为应用设计图像的详细信息，请参阅人机界面指南中的图像章节。'
 - 内容: 'Decide whether to port your app at all'
   提示: ''
-  翻译: '决定是否移植你的应用'
+  翻译: '决定是否移植应用'
 - 内容: 'In some cases, it might not make sense to port your app for visionOS. For example, don’t port the following types of apps:'
   提示: ''
   翻译: '在某些情况下，将应用移植到 visionOS 可能并不合理。例如，请勿移植以下类型的应用：'
@@ -297,4 +297,4 @@
   翻译: '自拍或摄影类应用。这包括以通过设备摄像头捕捉图像或视频为主要目的的应用程序。'
 - 内容: 'If your app uses an unsupported feature but can function without it, you can still bring your app to visionOS. Remove features that aren’t available and focus on bringing the rest of your content to the platform. For example, if you have an app that lets people write down notes and take pictures to include with those notes, disable the picture-taking ability in visionOS but let people add text and incorporate images they already have.'
   提示: ''
-  翻译: '如果你的应用使用了不支持的功能，但在没有该功能的情况下也能正常运行，你仍然可以将应用引入到 visionOS 中。移除不支持的功能，并专注于将其他内容引入该平台。例如，如果你有一款应用可以让人们写下笔记并拍照放在笔记中，那么你可以在 visionOS 中禁用拍照功能，但允许用户添加文字并整合已有的图片。'
+  翻译: '如果你的应用使用了不支持的功能，但在没有该功能的情况下也能正常运行，你仍然可以将应用移植到 visionOS 中。移除不支持的功能，并专注于将其他内容移植到该平台。例如，如果你有一款应用可以让人们写下笔记并拍照放在笔记中，那么你可以在 visionOS 中禁用拍照功能，但允许用户添加文字并整合已有的图片。'
