fix：引入 -> 移植到

--- a/project/visionos/bringing-your-arkit-app-to-visionos.yml
+++ b/project/visionos/bringing-your-arkit-app-to-visionos.yml
@@ -1,15 +1,15 @@
 - 内容: 'Bringing your ARKit app to visionOS'
   提示: ''
-  翻译: '将 ARKit 应用引入 visionOS'
+  翻译: '将 ARKit 应用移植到 visionOS'
 - 内容: 'Update an iPadOS or iOS app that uses ARKit, and provide an equivalent experience in visionOS.'
   提示: ''
-  翻译: '更新使用 ARKit 的 iPadOS 或 iOS 应用，并在 visionOS 中提供相同的体验。'
+  翻译: '更新使用了 ARKit 的 iPadOS 或 iOS 应用，并在 visionOS 中提供相同的体验。'
 - 内容: 'Overview'
   提示: ''
   翻译: '概述'
 - 内容: 'If you use ARKit to create an augmented reality experience on iPhone or iPad, you need to rethink your use of that technology when bringing your app to visionOS. ARKit plays a crucial role in delivering your content to the display in iPadOS and iOS. In visionOS, you use ARKit only to acquire data about the person’s surroundings, and you do so using a different set of APIs.'
   提示: ''
-  翻译: '如果你使用 ARKit 在 iPhone 或 iPad 上创建增强现实体验，那么在将你的应用引入 visionOS 时，你需要重新考虑对该技术的使用。在 iPadOS 和 iOS 中，ARKit 在向显示屏交付内容方面发挥着至关重要的作用。而在 visionOS 中，你只能使用 ARKit 来获取有关用户周围环境的数据，而且使用的是一套不同的 API。'
+  翻译: '如果你使用 ARKit 在 iPhone 或 iPad 上创建增强现实体验，那么在将你的应用移植到 visionOS 时，你需要重新考虑对该技术的使用。在 iPadOS 和 iOS 中，ARKit 在向显示屏交付内容方面发挥着至关重要的作用。而在 visionOS 中，你只能使用 ARKit 来获取有关用户周围环境的数据，而且使用的是一套不同的 API。'
 - 内容: 'In visionOS, you don’t need a special view to display an augmented reality interface. Build windows with your app’s content using SwiftUI or UIKit. When you display those windows, visionOS places them in the person’s surroundings for you. If you want to control the placement of any 2D or 3D content in the person’s surroundings, build your content using SwiftUI and RealityKit.'
   提示: ''
   翻译: '在 visionOS 中，你不需要一个特殊的视图来显示增强现实界面。你只需使用 SwiftUI 或 UIKit 构建包含应用内容的窗口。当你显示这些窗口时，visionOS 会为你将它们放置在用户的周围环境中。如果你想控制用户的周围环境中任意 2D 或 3D 内容的位置，请使用 SwiftUI 和 RealityKit 构建你的内容。'
@@ -18,7 +18,7 @@
   翻译: '在将应用迁移到 visionOS 时，请尽可能多地复用应用的当前内容。visionOS 支持与 iOS 相同的大多数技术，因此你可以重复使用项目素材、3D 模型和大多数自定义视图。但不要复用应用的 ARKit 代码或任何依赖于 visionOS 平台不支持技术的代码。'
 - 内容: 'For general guidance on how to port apps to visionOS, see Bringing your existing apps to visionOS.'
   提示: ''
-  翻译: '有关如何将应用移植到 visionOS 的一般指导，请参阅将你的现有应用引入 visionOS。'
+  翻译: '有关如何将应用移植到 visionOS 的一般指导，请参阅将现有应用移植到 visionOS。'
 - 内容: 'Adopt technologies available in both iOS and visionOS'
   提示: ''
   翻译: '采用 iOS 和 visionOS 兼容的技术'
@@ -27,7 +27,7 @@
   翻译: '要创建一个既可在 iOS 又可以在 visionOS 中运行的应用，请使用两个平台上兼容的技术。iOS 中的 ARKit 可让你使用多种不同的技术创建界面，而 visionOS 中的首选技术是 SwiftUI 和 RealityKit。如果你目前没有使用 RealityKit 来制作 3D 内容，请考虑在开始添加 visionOS 支持之前切换到 RealityKit。如果你的 iOS 应用中保留了使用旧技术的代码，那么在迁移到 visionOS 时，你可能需要使用 RealityKit 重新创建其中的大部分代码。'
 - 内容: 'If you use Metal to draw your app’s content, you can bring your code to visionOS to create content for 2D views or to create fully immersive experiences. You can’t use Metal to create 3D content that integrates with the person’s surroundings. This restriction prevents apps from sampling pixels of the person’s surroundings, which might contain sensitive information. For information on how to create a fully immersive experience with Metal, see Drawing fully immersive content using Metal.'
   提示: ''
-  翻译: '如果你使用 Metal 绘制应用的内容，你可以将代码引入 visionOS，为 2D 视图创建内容或创建完全沉浸式体验。你不能使用 Metal 创建与用户周围环境相融合的 3D 内容。这一限制可防止应用对用户周围环境的像素进行采样，因为这些像素可能包含敏感信息。有关如何使用 Metal 创建完全沉浸式体验的信息，请参阅使用 Metal 绘制完全沉浸式内容。'
+  翻译: '如果你使用 Metal 绘制应用的内容，你可以将代码移植到 visionOS，为 2D 视图创建内容或创建完全沉浸式体验。你不能使用 Metal 创建与用户周围环境相融合的 3D 内容。这一限制可防止应用对用户周围环境的像素进行采样，因为这些像素可能包含敏感信息。有关如何使用 Metal 创建完全沉浸式体验的信息，请参阅使用 Metal 绘制完全沉浸式内容。'
 - 内容: 'Convert 3D assets to the USDZ format'
   提示: ''
   翻译: '将 3D 素材转换为 USDZ 格式'
@@ -39,13 +39,13 @@
   翻译: '在为 visionOS 构建 3D 场景时，请使用 Reality Composer Pro 创建包含 USDZ 素材的场景。使用 Reality Composer Pro，你可以导入你的 USD 文件，并进行无损的原装编辑。如果你的 iOS 应用为你的素材添加了自定义材质，请在应用中将这些材质转换为着色器图形。'
 - 内容: 'Although you can bring models and materials to your project using USDZ files, you can’t bring custom shaders you wrote using Metal. Replace any custom shader code with MaterialX shaders. Many digital content creation tools support the MaterialX standard, and let you create dynamic shaders and save them with your USDZ files. Reality Composer Pro and RealityKit support MaterialX shaders, and incorporate them with your other USDZ asset content. For more information about MaterialX, see https://materialx.org.'
   提示: ''
-  翻译: '虽然你可以使用 USDZ 文件将模型和材质引入项目，但你无法引入使用 Metal 编写的自定义着色器。请使用 MaterialX 着色器替换任何自定义着色器代码。许多数字内容创建工具都支持 MaterialX 标准，可让你创建动态着色器并将其与 USDZ 文件一起保存。Reality Composer Pro 和 RealityKit 均支持 MaterialX 着色器，并将它们与其他 USDZ 素材内容结合在一起。有关 MaterialX 的更多信息，请参阅 https://materialx.org。'
+  翻译: '虽然你可以使用 USDZ 文件将模型和材质移植到项目，但你无法移植使用了 Metal 编写的自定义着色器。请使用 MaterialX 着色器替换任何自定义着色器代码。许多数字内容创建工具都支持 MaterialX 标准，可让你创建动态着色器并将其与 USDZ 文件一起保存。Reality Composer Pro 和 RealityKit 均支持 MaterialX 着色器，并将它们与其他 USDZ 素材内容结合在一起。有关 MaterialX 的更多信息，请参阅 https://materialx.org。'
 - 内容: 'Update your interface to support visionOS'
   提示: ''
   翻译: '更新界面以支持 visionOS'
 - 内容: 'In visionOS, you manage your app’s content, and the system handles the integration of that content with the person’s surroundings. This approach differs from iOS, where you use a special ARKit view to blend your content and the live camera content. Bringing your interface to visionOS therefore means you need to remove this special ARKit view and focus only on your content.'
   提示: ''
-  翻译: '在 visionOS 中，你负责管理应用的内容，而系统会负责处理这些内容与用户周围环境的整合。这是与 iOS 不同的一点：在 iOS 中，你使用特殊的 ARKit 视图将你的内容与实时摄像头内容融合在一起。因此，将你的界面引入 visionOS 意味着你需要移除这个特殊的 ARKit 视图，并只专注于你的内容。'
+  翻译: '在 visionOS 中，你负责管理应用的内容，而系统会负责处理这些内容与用户周围环境的整合。这是与 iOS 不同的一点：在 iOS 中，你使用特殊的 ARKit 视图将你的内容与实时摄像头内容融合在一起。因此，将你的界面移植到 visionOS 意味着你需要移除这个特殊的 ARKit 视图，并只专注于你的内容。'
 - 内容: 'If you can display your app’s content using SwiftUI or UIKit views, build a window with those views and present it from your visionOS app. If you use other technologies to incorporate 2D or 3D content into the person’s surroundings, make the following substitutions in the visionOS version of your app.'
   提示: ''
   翻译: '如果你可以使用 SwiftUI 或 UIKit 视图来显示应用的内容，那么就用这些视图构建一个窗口，并从你的 visionOS 应用中将其呈现出来。如果你使用其他技术将 2D 或 3D 内容融入用户周围的环境，请在你的应用的 visionOS 版本中进行以下替换。'
