--- a/project/visionos/checking-whether-your-app-is-compatible-with-visionos.yml
+++ b/project/visionos/checking-whether-your-app-is-compatible-with-visionos.yml
@@ -3,7 +3,7 @@
   翻译: '检查现有应用是否与 visionOS 兼容'
 - 内容: 'Determine whether your existing iOS or iPadOS app runs as is in visionOS or requires modifications to handle platform differences.'
   提示: ''
-  翻译: '确认你现有的 iOS 或 iPadOS 应用是否能原封不动地在 visionOS 中正常运行，还是需要进行修改以处理平台差异。'
+  翻译: '确认你现有的 iOS 或 iPadOS 应用能否原封不动地在 visionOS 中正常运行，还是需要进行修改以处理平台差异。'
 - 内容: 'Overview'
   提示: ''
   翻译: '概述'
